summative.moria.Moria.scala.error
Erreur de compilation :
Moria:11: error: ')' expected but '.' found.
  } else if (estSurBiscuit() &&  == getDirection() Direction.WEST) {
                                                            ^Moria:20: error: illegal start of simple expression
}
^